src/objects/ConnectedApp__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Connected App Settings</description>
    <fields>
        <fullName>Callback_URL__c</fullName>
        <label>Callback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ConnectedApp</label>
</CustomObject>